Update Supabase URL and key in configuration

--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
     <script>
         // --- 1. CONFIGURAÇÃO ---
         const CONFIG = {
-            sbUrl: 'https://djxcvgrunadpkzwpxtom.supabase.co', // INSIRA AQUI
-            sbKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRqeGN2Z3J1bmFkcGt6d3B4dG9tIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI0NjczOTYsImV4cCI6MjA3ODA0MzM5Nn0.CRTsAj-yIqXJwrx1CGh6dhTjvsgyazHidOseJQwyRpI'     // INSIRA AQUI
+            sbUrl: 'https://groezaseypdbpgymgpvo.supabase.co', // INSIRA AQUI
+            sbKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdyb2V6YXNleXBkYnBneW1ncHZvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNjkxNjYsImV4cCI6MjA4MTY0NTE2Nn0.5U5QeoGmZn_i9Y8POoUCkatBUAdSW-cjHRyfxpm_pyM'     // INSIRA AQUI
         };
         const _sb = supabase.createClient(CONFIG.sbUrl, CONFIG.sbKey);
 
