Update Mercado Pago public key for testing

--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
         const CONFIG = {
             sbUrl: 'https://groezaseypdbpgymgpvo.supabase.co',
             sbKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdyb2V6YXNleXBkYnBneW1ncHZvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNjkxNjYsImV4cCI6MjA4MTY0NTE2Nn0.5U5QeoGmZn_i9Y8POoUCkatBUAdSW-cjHRyfxpm_pyM',
-            // Credenciais MP (Token removido por segurança, agora está no backend /api/pix.js)
-            mpPublicKey: 'APP_USR-c0850387-263d-40d4-9780-464f471fc612'
+            // Credencial Pública de TESTE
+            mpPublicKey: 'TEST-ab3c1f5e-2e9c-4489-93d4-3ec6fc1599b3'
         };
         
         const _sb = supabase.createClient(CONFIG.sbUrl, CONFIG.sbKey);
