--- a/index.html
+++ b/index.html
@@ -937,6 +937,11 @@
                         initialization: { amount: amount, payer: { email: App.state.profile.email } },
                         customization: { paymentMethods: { ticket: "all", bankTransfer: "all", creditCard: "all", debitCard: "all", maxInstallments: 3 } },
                         callbacks: {
+                            onReady: () => {},
+                            onError: (error) => {
+                                console.error(error);
+                                App.utils.toast("Erro no formulário de pagamento.", "error");
+                            },
                             onSubmit: async ({ formData }) => {
                                 return new Promise((resolve, reject) => {
                                     fetch("/api/pix", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(formData) })
@@ -1059,7 +1064,7 @@
                 document.getElementById('public-catalog').innerHTML = data?.map(p => `
                     <div class="card">
                         <div style="height:180px; background:#f1f5f9; margin:-1.5rem -1.5rem 1rem -1.5rem; display:flex; align-items:center; justify-content:center; overflow:hidden;">
-                            <img src="${p.imagem_url}" style="width:100%; height:100%; object-fit:cover;">
+                            <img src="${p.imagem_url || 'https://placehold.co/400x300?text=Sem+Foto'}" style="width:100%; height:100%; object-fit:cover;">
                         </div>
                         <div class="badge status-aceito" style="margin-bottom:0.5rem">${p.stores?.nome_loja}</div>
                         <h4>${p.nome}</h4><h2>R$ ${p.preco.toFixed(2)}</h2>
