--- a/index.html
+++ b/index.html
@@ -897,8 +897,8 @@
 
             <div class="container">
                 <div style="margin-bottom: 2rem; text-align: center;">
-                    <h1 style="font-size: 2rem;">Encontre Profissionais e Serviços</h1>
-                    <p>Logística inteligente para o que você precisar.</p>
+                    <h1 style="font-size: 2rem;">Encontre o que você precisa na palma da sua mão</h1>
+                    <p>Plataforma Inteligente para que você encontre o que precisa</p>
                 </div>
                 
                 <div id="public-catalog" class="grid grid-3">
