--- a/index.html
+++ b/index.html
@@ -2111,8 +2111,8 @@
                     if (serviceCats.includes(category)) {
                         // Se não foi definido taxa específica pelo lojista (delivery_info nulo), cobra padrão 35
                         if (feeVal === 0) {
-                            feeVal = 35.00;
-                            alert("Taxa de serviço padrão de R$ 35,00 aplicada.");
+                            feeVal = 00.00;
+                            alert("Não cobramos entrega");
                         }
                     }
 
