Fix formatting of delivery_info assignment

--- a/index.html
+++ b/index.html
@@ -1526,7 +1526,7 @@
                         promocao: promo, 
                         disponibilidade: disp,
                         gesso_info: gessoInfo,
-                        delivery_info: deliveryInfo
+                        delivery_info: deliveryInfo,
                         descricao: descricao,
                         sizes: sizes
                     };
