--- a/index.html
+++ b/index.html
@@ -1276,25 +1276,24 @@
                     App.state.currentStore = store;
 
                     document.getElementById('store-pickup-address').value = store.endereco_retirada || '';
+                 // ... código anterior ...
                     document.getElementById('store-delivery-fee').value = store.taxa_entrega_padrao || '';
 
-                    // ============================================================
-                    // COLE A CORREÇÃO AQUI (INÍCIO)
-                    // ============================================================
-                    
-                    // Se o tipo_loja for "Restaurante" OU estiver vazio (null), MOSTRA o painel
-                    if (!store.tipo_loja || store.tipo_loja === 'Restaurante') {
-                        document.getElementById('admin-restaurant-panel').style.display = 'block';
-                        
-                        // Opcional: Salva no banco pra ficar fixo como Restaurante da próxima vez
+                    // --- INÍCIO DA CORREÇÃO OBRIGATÓRIA ---
+                    // Força aparecer se for nulo OU se for Restaurante
+                    if (!store.tipo_loja || store.tipo_loja.trim() === 'Restaurante') {
+                        const panel = document.getElementById('admin-restaurant-panel');
+                        if(panel) panel.style.display = 'block';
+
+                        // Se estava vazio, corrige no banco agora
                         if(!store.tipo_loja) {
                              await _sb.from('stores').update({ tipo_loja: 'Restaurante' }).eq('id', store.id);
                         }
                     } else {
-                        // Só esconde se estiver explicitamente escrito outra coisa (ex: "Loja de Roupa")
-                        document.getElementById('admin-restaurant-panel').style.display = 'none';
+                        const panel = document.getElementById('admin-restaurant-panel');
+                        if(panel) panel.style.display = 'none';
                     }
-
+                    // --- FIM DA CORREÇÃO ---
                     // ============================================================
                     // FIM DA CORREÇÃO
                     // ============================================================
