--- a/index.html
+++ b/index.html
@@ -2689,7 +2689,7 @@
                     }
                     document.getElementById(viewType === 'loja' ? 'store-chat-list' : 'client-chat-list').innerHTML = html;
                 }
-            } // Fim do Chat (VÍRGULA AQUI)
+            }, // Fim do Chat (VÍRGULA AQUI)
 
            provider: {
                 init: async () => {
